--- a/src/app/Components/reset-password/reset-password.component.html
+++ b/src/app/Components/reset-password/reset-password.component.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="login-container">
-        <form class="login">
+    <div class="reset-container">
+        <form class="reset" [formGroup]="userPasswordReset" (ngSubmit)="onSubmit()">
             <h1 style="background-color: darksalmon;border-radius: 5px;"><span style="color: darkgoldenrod;">Fun</span><span
                     style="color: dodgerblue;">Doo</span><span style="color: forestgreen;">App</span></h1>
             <hr>
@@ -15,18 +15,18 @@
             <p>
                 <mat-form-field appearance="outline">
                     <mat-label>Password</mat-label>
-                    <input type="password" matInput placeholder="Password">
+                    <input type="password" formControlName="password" matInput placeholder="Password">
                 </mat-form-field>
             </p>
             <p>
                 <mat-form-field appearance="outline">
                     <mat-label>Confirm Password</mat-label>
-                    <input type="password" matInput placeholder="Confirm Password">
+                    <input type="password" formControlName="confirmPassword" matInput placeholder="Confirm Password">
                 </mat-form-field>
             </p>
             <div class="ButtonDiv">
                 <button mat-button (click)="goToLogin()" type="button">Back</button>
-                <button class="LoginButton" mat-raised-button color="primary">Reset</button>
+                <button class="resetButton" type="submit" mat-raised-button color="primary">Reset</button>
             </div>
         </form>
     </div>
