--- a/src/app/Components/reset-password/reset-password.component.scss
+++ b/src/app/Components/reset-password/reset-password.component.scss
@@ -1,4 +1,4 @@
-.login {
+.reset {
     margin-top: 35px;
     padding: 20px;
     display: flexbox;
@@ -14,7 +14,7 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
-.login-container {
+.reset-container {
     margin: 15px;
     width: 98%;
     height: 90%;
@@ -25,7 +25,7 @@
     border-radius: 10px;
 }
 
-.LoginButton {
+.resetButton {
     border: 1px solid #0cdcf7;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
