--- a/src/app/Components/forgotpassword/forgotpassword.component.html
+++ b/src/app/Components/forgotpassword/forgotpassword.component.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="password-container">
-        <form class="password">
+        <form class="password" (ngSubmit)="onSubmit()" [formGroup]="forgotPasswordUser">
             <h1 style="background-color: darksalmon;border-radius: 5px;"><span style="color: darkgoldenrod;">Fun</span><span
                     style="color: dodgerblue;">Doo</span><span style="color: forestgreen;">App</span></h1>
             <hr>
@@ -15,14 +15,14 @@
             <p>
                 <mat-form-field appearance="outline" class="example-full-width">
                     <mat-label>Email</mat-label>
-                    <input type="email" matInput placeholder="Ex. example@example.com">
-                    <mat-error>Please enter a valid email address</mat-error>
-                    <mat-error>Email is <strong>required</strong></mat-error>
+                    <input type="email" formControlName="email" matInput placeholder="Ex. example@example.com">
+                    <mat-error>Please enter a valid Email Address</mat-error>
+                    <mat-error>Email is <strong>Required</strong></mat-error>
                 </mat-form-field>
             </p>
             <div class="ButtonDiv">
                 <button mat-button (click)="goToLogin()" type="button">Back</button>
-                <button class="LoginButton" mat-raised-button color="primary">send</button>
+                <button class="LoginButton" [disabled]="forgotPasswordUser.invalid" type="submit" mat-raised-button color="primary">send</button>
             </div>
         </form>
     </div>
