--- a/src/app/Components/login/login.component.scss
+++ b/src/app/Components/login/login.component.scss
@@ -1,34 +1,37 @@
-.login{
-    margin-top: 35px;
-    padding: 20px;
-    display: flexbox;
+.container{
+    width: 100%;
+    height: 100%;
+    display: flex;
     justify-content: center;
     align-items: center;
-    text-align: center;
-    align-self: center;
-    width: 30%;
-    height: 65%;
-    background-color: #f0f0f0;
-    border: 1px solid #e5e5e5;
-    border-radius: 25px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-}
-.login-container{
-    margin: 15px;
-    width: 98%;
-    height: 90%;
-    background-color: burlywood;
-    display: flex;
     flex-direction: column;
-    justify-content: center;
-    border-radius: 10px;
-}
-.LoginButton{
-    border: 1px solid #0cdcf7;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
-.ButtonDiv{
+.form{
+    border: 3px;
+    width: 25%;
+    height: 55%;
+    border-radius: 5px;
+    box-shadow: 1px 1px 7px 6px rgba(0.1, 0, 0, 0.1);
+    padding: 30px;
+}
+
+mat-form-field {
+    width: 100%;
+}
+
+.buttonContainer{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+}
+
+.foot{
+    display: flex;
+    width: 29%;
+    justify-content: space-between;
+    align-items: baseline;
+}
+
+::ng-deep .mat-form-field-underline {
+    display: none;
 }
